# fs-agent

./: .gitignore  LICENSE  permissions.example.yaml  pyproject.toml  requirements.txt
src/graph_builder/: entities.py  graph.py  similarity.py  walker.py
src/security_kernel/: audit.py  config_loader.py  kernel.py  path_utils.py
src/utils/: logger.py
tests/: test_graph_builder.py  test_security_kernel.py
