[project]
name = "fs-organizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/agent",
    "src/graph_builder",
    "src/security_kernel",
    "src/snapshot_engine",
    "src/vault_manager",
    "src/utils" 
]
